--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -13,7 +13,7 @@ title: Assaporami Business - About
               <h3 class="h3-responsive">Assaporami - Servizi di ristorazione innovativi per aziende</h3>
             </div>
             <div id="about-text">
-              <p class="p-responsive">Olimpia Rospigliosi si avvale di esperti collaboratori per creare un team personalizzato e offrire servizi di posizionamento del brand, di supporto commerciale, di comunicazione e di produzione eventi.
+              <p class="p-responsive">Assaporami si avvale di un team di Chef e nutrizionisti per selezionare i migliori ingredienti e comporre i piatti freschi, buoni e sani della vostra pausa pranzo ideale.
               </p>
             </div>
           </div>
@@ -40,10 +40,17 @@ title: Assaporami Business - About
                 <hr align="center" width="10%">
                 <div>
                   <p>
-                  Dopo un’infanzia trascorsa a Parigi, tra le vetrine dell’alta moda, e una successiva tappa a Roma, Olimpia si trasferisce a Milano dove lavora nel fondo di investimenti L Capital (gruppo LVMH). Svolge una successiva esperienza presso la Camera Nazionale della Moda Italiana, in cui gestisce eventi a Palazzo Reale e Palazzo Marino.
+                  Marco Almerigogna, Incididunt proident exercitation dolor reprehenderit duis non proident commodo aliquip aliquip duis dolore tempor ut est.
                   </p>
                   <p>
-                  Nel 2008 apre la propria agenzia di PR & Comunicazione: lancia marchi come Chrissie Morris e Salar. Scopre il marchio Kinloch, di cui cura le relazioni pubbliche e l’immagine, ed individua un investitore per il brand. Collabora tra gli altri con Walter De Silva, Agalma Medusae, Rosa Castelbarco e gestisce varie operazioni nei settori della moda, del design e dell'arte.
+                  Giaccomo Treccani, Aliquip sed minim incididunt irure ad amet proident consectetur exercitation.
+                  </p>
+                  <p>
+                  Regis Weill, Do sint ut velit dolore et exercitation est ea veniam fugiat deserunt anim dolore ad.
+                  </p>
+
+                  <p>
+                  Giaccomo, Marco e Regis Voluptate sint dolor in nulla dolore est officia sit reprehenderit proident cupidatat in. Elit nulla proident elit sed in do elit sunt aliquip. Fugiat eu excepteur adipisicing voluptate tempor commodo elit incididunt aute quis do irure adipisicing veniam eu reprehenderit ullamco consectetur enim.
                   </p>
                 </div>
               </div>
@@ -60,19 +67,19 @@ title: Assaporami Business - About
             <div class="box-content">
               <div class="content-about text-center">
                 <div>
-                  <h2>OR PR & Comunicazione</h2>
+                  <h2>Assaporami</h2>
                 </div>
                 <div>
-                  <h5>L'agenzia</h5>
+                  <h5>La società</h5>
                 </div>
                 <hr align="center" width="10%">
                 <div>
                   <p>
-                    Situato a Milano, nella centralissima Piazza Borromeo, l’agenzia offre una molteplicità di servizi di comunicazione, per marchi di moda, lifestyle, e design, avvalendosi di esperti collaboratori per creare un team personalizzato.
+                    Aperta a Milano nel 2016, Assaporami offre una molteplicità di servizi di ristorazione alle aziende perchè possano offrire ai loro collaboratori una pausa pranzo sana ed equilibrata. Food delivery a prezzi dolci o soluzion on-site, le soluzioni proposte sono flessibili e richiedono poco spazio.
                   </p>
 
                   <p>
-                    Un’ampia parte dello spazio è dedicata all’arte dove l'agenzia organizza mostre e opening.
+                    Avvalendosi di esperti culinari e di nutrizione, Assaporami crea ogni giono dei piatti freschi, buoni e sani per i dipendenti.
                   </p>
                 </div>
             </div>
