--- a/source/layouts/_navbar.html.erb
+++ b/source/layouts/_navbar.html.erb
@@ -5,7 +5,7 @@
     <div class="navbar navbar-expand-sm navbar-light navbar-rospigliosi">
 
       <% link_to "index.html", class: "navbar-brand" do %>
-        <%= image_tag "logo_or.png" %>
+        <%= image_tag "https://res.cloudinary.com/orexibus/image/upload/v1573679324/Assaporami/Index/assaporami_cloud_logo.png" %>
         <!-- https://www.kisspng.com/png-logo-brand-number-1942775/ -->
       <% end %>
 
@@ -24,9 +24,6 @@
           </li>
           <li class="nav-item">
             <%= link_to "Cibo", "/cibo.html", class: "nav-link", id: "nav-color" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Aziende", "/services.html", class: "nav-link", id: "nav-color" %>
           </li>
           <li class="nav-item">
             <%= link_to "Contatti", "/contact.html", class: "nav-link", id: "nav-color" %>
