--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -75,7 +75,7 @@ title: Assaporami Business - About
                 <hr align="center" width="10%">
                 <div>
                   <p>
-                    Aperta a Milano nel 2016, Assaporami offre una molteplicità di servizi di ristorazione alle aziende perchè possano offrire ai loro collaboratori una pausa pranzo sana ed equilibrata. Food delivery a prezzi dolci o soluzion on-site, le soluzioni proposte sono flessibili e richiedono poco spazio.
+                    Presente sul mercato dal 2016, Assaporami offre una molteplicità di servizi di ristorazione alle aziende perchè possano offrire ai loro collaboratori una pausa pranzo sana ed equilibrata. Food delivery a prezzi dolci o soluzion on-site, le soluzioni proposte sono flessibili e richiedono poco spazio.
                   </p>
 
                   <p>
