--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -152,9 +152,8 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
       <div class="class=col-12 col-md-6 col-lg-4 flip-card-reason">
         <div class="card-reason-inner">
           <div class="card-reason-front">
-                <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  Servizio su misura e attivazione veloce.
-                </h4>
+            <h4 class="text-center"><i class="fas fa-tachometer-alt icon-color"></i>  Servizio su misura e attivazione veloce.
+            </h4>
           </div>
           <div class="card-reason-back">
             <p>Valutiamo la migliore soluzione ristorativa in base al tuo budget e al tuo spazio. Facile da installare le nostre soluzioni non necessitano grande spazio. Da qualche m2 per un frigo fino ad una stanza per un servizio con il nostro personale decicato.</p>
@@ -166,7 +165,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  Migliorate la salute dei vostri dipendenti.
+                  <i class="fas fa-heartbeat icon-color"></i>  Migliorate la salute dei vostri dipendenti.
                 </h4>
           </div>
           <div class="card-reason-back">
@@ -179,7 +178,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  Aumentate il livello di energia pomeridiana.
+                  <i class="fas fa-battery-full icon-color"></i>  Aumentate il livello di energia pomeridiana.
                 </h4>
           </div>
           <div class="card-reason-back">
@@ -192,7 +191,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  Risparmete tempo semplificando la logisica della pausa pranzo.
+                  <i class="fas fa-business-time icon-color"></i>  Risparmete tempo semplificando la logisica della pausa pranzo.
                 </h4>
           </div>
           <div class="card-reason-back">
@@ -205,7 +204,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  Trattenete e reclutate piu facilmente i migliori talenti.
+                  <i class="fas fa-user-graduate icon-color"></i>  Trattenete e reclutate piu facilmente i migliori talenti.
                 </h4>
           </div>
           <div class="card-reason-back">
@@ -218,7 +217,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i> Contribuite a creare le relazioni sociali in azienda.
+                  <i class="fas fa-user-friends icon-color"></i> Contribuite a creare le relazioni sociali in azienda.
                 </h4>
           </div>
           <div class="card-reason-back">
@@ -255,7 +254,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  Fresco. Buono. Sano.
+                  <i class="fas fa-seedling icon-color"></i>  Fresco. Buono. Sano.
                 </h4>
           </div>
           <div class="card-reason-back">
@@ -268,7 +267,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  Un esperienza culinare autentica.
+                  <i class="fas fa-rainbow icon-color"></i>  Un esperienza culinare autentica.
                 </h4>
           </div>
           <div class="card-reason-back">
@@ -281,7 +280,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  Una totale trasparenza: Sai cosa mangi.
+                  <i class="fas fa-eye icon-color"></i>  Una totale trasparenza: Sai cosa mangi.
                 </h4>
           </div>
           <div class="card-reason-back">
@@ -294,7 +293,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  Mangia quando vuoi, dove vuoi.
+                  <i class="fas fa-dove icon-color"></i>  Mangia quando vuoi, dove vuoi.
                 </h4>
           </div>
           <div class="card-reason-back">
@@ -307,7 +306,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  Prezzi dolci per dipendenti in salute.
+                  <i class="fas fa-piggy-bank icon-color"></i>  Prezzi dolci per dipendenti in salute.
                 </h4>
           </div>
           <div class="card-reason-back">
@@ -320,7 +319,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  Gestisci al meglio le tue riunioni importanti.
+                  <i class="fas fa-calendar-check icon-color"></i>  Gestisci al meglio le tue riunioni importanti.
                 </h4>
           </div>
           <div class="card-reason-back">
