logo + reason card modif

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -152,8 +152,13 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
       <div class="class=col-12 col-md-6 col-lg-4 flip-card-reason">
         <div class="card-reason-inner">
           <div class="card-reason-front">
-            <h4 class="text-center"><i class="fas fa-tachometer-alt icon-color"></i>  Servizio su misura e attivazione veloce.
-            </h4>
+            <div class="card-reason-icon">
+              <i class="fas fa-tachometer-alt icon-color"></i>
+            </div>
+            <div>
+              <h4 class="text-center">  Servizio su misura e attivazione veloce.
+              </h4>
+            </div>
           </div>
           <div class="card-reason-back">
             <p>Valutiamo la migliore soluzione ristorativa in base al tuo budget e al tuo spazio. Facile da installare le nostre soluzioni non necessitano grande spazio. Da qualche m2 per un frigo fino ad una stanza per un servizio con il nostro personale decicato.</p>
@@ -352,7 +357,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
       <div class="col-12 col-md-6 col-lg-6">
         <h3 class="mb-3">Dei piatti per tutti i stili di vita</h3>
         <div>
-          <p class="mb-0">In Assaporami, siamo molto attenti al benessere. Per questo motivo proponiamo dei piatti freschi, buoni e sani. Siamo anche molto attenti al rispetto delle persone, alle loro convinzioni e ai loro modo di alimentarsi. I nostri chef propongono un ampia gamma di piatti che permette di rispondere a queste aspettative: Piatti per sportivi, vegani, vegetariani, piatti senza glutine, o senza maiale. Le etichette, e le informazioni sul nostro sito, vi permettono di sapere quali ingredienti sono stati usati per la loro preparazione, se ci sono degli allergeni particolari, quanti calorie comporta un piatto o ancora che tipo di nutrimenti contengono. In poche parole, pensiamo a voi. A tutti voi.</p>
+          <p class="mb-0">In Assaporami, siamo molto attenti al benessere. Per questo motivo proponiamo dei piatti freschi, buoni e sani. Siamo anche molto attenti al rispetto delle persone, alle loro convinzioni e ai loro modo di alimentarsi. I nostri chef propongono un ampia gamma di piatti equilibrati: Piatti per sportivi, vegani, vegetariani, piatti senza glutine, o senza maiale. Le etichette, e le informazioni sul nostro sito, vi permettono di sapere quali ingredienti sono stati usati per la loro preparazione, se ci sono degli allergeni particolari, quanti calorie comporta un piatto o ancora che tipo di nutrimenti contengono. Pensiamo a voi. A tutti voi.</p>
         </div>
       </div>
       <div class="col-12 col-md-6 col-lg-6">
