--- a/source/layouts/_navbar.html.erb
+++ b/source/layouts/_navbar.html.erb
@@ -4,8 +4,8 @@
 
     <div class="navbar navbar-expand-sm navbar-light navbar-rospigliosi">
 
-      <% link_to "index.html", class: "navbar-brand" do %>
-        <%= image_tag "https://res.cloudinary.com/orexibus/image/upload/v1573679324/Assaporami/Index/assaporami_cloud_logo.png" %>
+      <% link_to "index.html", class: "navbar-brand", id: "brand-border" do %>
+        <%= image_tag "https://res.cloudinary.com/orexibus/image/upload/v1573727841/Assaporami/Index/assaporami_logo.png" %>
         <!-- https://www.kisspng.com/png-logo-brand-number-1942775/ -->
       <% end %>
 
