--- a/source/stylesheets/components/_card_reason.scss
+++ b/source/stylesheets/components/_card_reason.scss
@@ -37,9 +37,13 @@
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 18px;
+}
+.card-reason-icon {
+  justify-content: flex-start;
 }
 
 /* Style the back side */
