better reason card

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -152,13 +152,8 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
       <div class="class=col-12 col-md-6 col-lg-4 flip-card-reason">
         <div class="card-reason-inner">
           <div class="card-reason-front">
-            <div class="card-reason-icon">
-              <i class="fas fa-tachometer-alt icon-color"></i>
-            </div>
-            <div>
-              <h4 class="text-center">  Servizio su misura e attivazione veloce.
-              </h4>
-            </div>
+              <i class="fas fa-tachometer-alt icon-reason"></i>
+              <h4 class="text-center text-reason">  Servizio su misura e attivazione veloce.</h4>
           </div>
           <div class="card-reason-back">
             <p>Valutiamo la migliore soluzione ristorativa in base al tuo budget e al tuo spazio. Facile da installare le nostre soluzioni non necessitano grande spazio. Da qualche m2 per un frigo fino ad una stanza per un servizio con il nostro personale decicato.</p>
@@ -169,9 +164,8 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
       <div class="class=col-12 col-md-6 col-lg-4 flip-card-reason">
         <div class="card-reason-inner">
           <div class="card-reason-front">
-                <h4 class="text-center">
-                  <i class="fas fa-heartbeat icon-color"></i>  Migliorate la salute dei vostri dipendenti.
-                </h4>
+            <i class="fas fa-heartbeat icon-reason"></i>
+            <h4 class="text-center text-reason">Migliorate la salute dei vostri dipendenti.</h4>
           </div>
           <div class="card-reason-back">
             <p>Mangiare bene ci mantiene in forma. Un team in salute permette di ridurre il numero di visite mediche, le assenze e il lavoro incompiuto. Mentre contribuisce ad aumentare la qualità del lavoro. </p>
@@ -182,9 +176,8 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
       <div class="class=col-12 col-md-6 col-lg-4 flip-card-reason">
         <div class="card-reason-inner">
           <div class="card-reason-front">
-                <h4 class="text-center">
-                  <i class="fas fa-battery-full icon-color"></i>  Aumentate il livello di energia pomeridiana.
-                </h4>
+            <i class="fas fa-battery-full icon-reason"></i>
+            <h4 class="text-center text-reason">Aumentate il livello di energia pomeridiana.</h4>
           </div>
           <div class="card-reason-back">
             <p>Un cibo troppo pesante ha effetti negativi sulla produttivita del team nella fascia pomeridiana. I nostri piatti freschi accuratamente studiati forniscono i nutrimenti necessari per aumentare concentrazione e resistenza fisica per il resto della giornata.</p>
@@ -195,9 +188,8 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
       <div class="class=col-12 col-md-6 col-lg-4 flip-card-reason">
         <div class="card-reason-inner">
           <div class="card-reason-front">
-                <h4 class="text-center">
-                  <i class="fas fa-business-time icon-color"></i>  Risparmete tempo semplificando la logisica della pausa pranzo.
-                </h4>
+            <i class="fas fa-business-time icon-reason"></i>
+            <h4 class="text-center text-reason">Risparmete tempo semplificando la logisica della pausa pranzo.</h4>
           </div>
           <div class="card-reason-back">
             <p>Scegliere un ristorante, ordinare i pasti, reccarsi sul posto, fare la fila...Una perdita di tempo notevole che invece viene restituito al vostro team.</p>
@@ -208,9 +200,8 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
       <div class="class=col-12 col-md-6 col-lg-4 flip-card-reason">
         <div class="card-reason-inner">
           <div class="card-reason-front">
-                <h4 class="text-center">
-                  <i class="fas fa-user-graduate icon-color"></i>  Trattenete e reclutate piu facilmente i migliori talenti.
-                </h4>
+            <i class="fas fa-user-graduate icon-reason"></i>
+            <h4 class="text-center text-reason">Trattenete e reclutate piu facilmente i migliori talenti.</h4>
           </div>
           <div class="card-reason-back">
             <p>I migliori i piu brillant collaboratori sono attrati dai migliori posti di lavoro. Offrendo i piatti Assaporamo con cibo fresco, buono e sanno ai vostri dipendenti, manderete un messaggio chiaro sul tipo di valore e di investimenti che fate nelle personne nella vostra azienda.</p>
@@ -221,9 +212,8 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
       <div class="class=col-12 col-md-6 col-lg-4 flip-card-reason">
         <div class="card-reason-inner">
           <div class="card-reason-front">
-                <h4 class="text-center">
-                  <i class="fas fa-user-friends icon-color"></i> Contribuite a creare le relazioni sociali in azienda.
-                </h4>
+            <i class="fas fa-user-friends icon-reason"></i>
+            <h4 class="text-center text-reason">Contribuite a creare le relazioni sociali in azienda.</h4>
           </div>
           <div class="card-reason-back">
             <p>Avere degli amici in azienda, ci rende piu felice e piu propenso a rimanere. E piu facile interagire e conoscere i propri collaboratori quando il cibo vien consegnato.</p>
@@ -258,9 +248,8 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
       <div class="class=col-12 col-md-6 col-lg-4 flip-card-reason">
         <div class="card-reason-inner">
           <div class="card-reason-front">
-                <h4 class="text-center">
-                  <i class="fas fa-seedling icon-color"></i>  Fresco. Buono. Sano.
-                </h4>
+            <i class="fas fa-seedling icon-reason"></i>
+            <h4 class="text-center text-reason">Fresco. Buono. Sano.</h4>
           </div>
           <div class="card-reason-back">
             <p>Ogni settimana, chef e nutrizionisti vi preparano un menu diverso con piatti creativi, bilanciati e sani. Selezioniamo con cura i migliori e piu freschi ingredienti. Consegnamo ogni giorno dei piatti freschi.</p>
@@ -271,9 +260,8 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
       <div class="class=col-12 col-md-6 col-lg-4 flip-card-reason">
         <div class="card-reason-inner">
           <div class="card-reason-front">
-                <h4 class="text-center">
-                  <i class="fas fa-rainbow icon-color"></i>  Un esperienza culinare autentica.
-                </h4>
+            <i class="fas fa-rainbow icon-reason"></i>
+            <h4 class="text-center text-reason">Un esperienza culinare autentica.</h4>
           </div>
           <div class="card-reason-back">
             <p>Offriamo un'ampia gamma di piatti per rispondere a tutti i gusti e stile di vita: super proteici, vegetariani, vegani, senza glutine..e cerchiamo di farti scoprire sapori del mondo senza dimenticare i piatti piu locali.</p>
@@ -284,9 +272,8 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
       <div class="class=col-12 col-md-6 col-lg-4 flip-card-reason">
         <div class="card-reason-inner">
           <div class="card-reason-front">
-                <h4 class="text-center">
-                  <i class="fas fa-eye icon-color"></i>  Una totale trasparenza: Sai cosa mangi.
-                </h4>
+            <i class="fas fa-eye icon-reason"></i>
+            <h4 class="text-center text-reason">Una totale trasparenza: Sai cosa mangi.</h4>
           </div>
           <div class="card-reason-back">
             <p>I piatti, serviti in mono-porzione e protetti, sono tutti etichetatti. Riportano tutto ciò che hai sempre voluto sapere: Ingredienti, calorie, apporto nutrizionale, allergeni...</p>
@@ -297,9 +284,8 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
       <div class="class=col-12 col-md-6 col-lg-4 flip-card-reason">
         <div class="card-reason-inner">
           <div class="card-reason-front">
-                <h4 class="text-center">
-                  <i class="fas fa-dove icon-color"></i>  Mangia quando vuoi, dove vuoi.
-                </h4>
+            <i class="fas fa-dove icon-reason"></i>
+            <h4 class="text-center text-reason">Mangia quando vuoi, dove vuoi.</h4>
           </div>
           <div class="card-reason-back">
             <p>Il tuo piatto servito in una scatola compostibile è sempre pronto ad essere degustato. Sigilito e protetto, lo puoi prendere quando vuoi/puoi e portalo dove preferisci: Sala pranzo, scrivania, sala riunione..o anche al parco! Decidi tu !</p>
@@ -310,9 +296,8 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
       <div class="class=col-12 col-md-6 col-lg-4 flip-card-reason">
         <div class="card-reason-inner">
           <div class="card-reason-front">
-                <h4 class="text-center">
-                  <i class="fas fa-piggy-bank icon-color"></i>  Prezzi dolci per dipendenti in salute.
-                </h4>
+            <i class="fas fa-piggy-bank icon-reason"></i>
+            <h4 class="text-center text-reason">Prezzi dolci per dipendenti in salute.</h4>
           </div>
           <div class="card-reason-back">
             <p>Proponiano prezzi scontati per le aziende con l'intento di rendere il cibo sano accessibile a tutti. Assieme alla tua azienda studiamo la migliore soluzione perche possa contribuire fino all 100% del costo del tuo pasto !</p>
@@ -323,9 +308,8 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
       <div class="class=col-12 col-md-6 col-lg-4 flip-card-reason">
         <div class="card-reason-inner">
           <div class="card-reason-front">
-                <h4 class="text-center">
-                  <i class="fas fa-calendar-check icon-color"></i>  Gestisci al meglio le tue riunioni importanti.
-                </h4>
+            <i class="fas fa-calendar-check icon-reason"></i>
+            <h4 class="text-center text-reason">Gestisci al meglio le tue riunioni importanti.</h4>
           </div>
           <div class="card-reason-back">
             <p>Siamo in grado di preparare dei piatti ad-hoc per le tue occasioni speciali: riunione del board, riunioni del tuo reparto, riunioni clienti. Basta che ci informi con qualche giorni di anticipo e saremo felici di deliziare i tuoi ospiti.</p>
