--- a/source/stylesheets/components/_card_reason.scss
+++ b/source/stylesheets/components/_card_reason.scss
@@ -38,12 +38,14 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-center;
   justify-content: center;
-  padding: 18px;
+  padding: 18px 18px;
 }
-.card-reason-icon {
-  justify-content: flex-start;
+.text-reason {
+  padding: 8px 0px;
+  flex-grow: 1;
+  margin-top: 4px;
 }
 
 /* Style the back side */
@@ -69,9 +71,13 @@ box-shadow: 0 0 15px rgba(0,0,0,0.2);
 padding: 18px 24px;
 }
 
-.icon-color {
+.icon-reason {
   color: $assa-green;
   font-size: 21px;
+  display: flex;
+  justify-content: center;
+  height: 50px;
+  padding: 16px;
 }
 // .card-reason > img {
 //   height: 200px;
