better content reason card

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -156,7 +156,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
               <h4 class="text-center text-reason">  Servizio su misura e attivazione veloce.</h4>
           </div>
           <div class="card-reason-back">
-            <p>Valutiamo la migliore soluzione ristorativa in base al tuo budget e al tuo spazio. Facile da installare le nostre soluzioni non necessitano grande spazio. Da qualche m2 per un frigo fino ad una stanza per un servizio con il nostro personale decicato.</p>
+            <p>Valutiamo la migliore soluzione in base a budget e spazio. Facile da installare le nostre soluzioni non necessitano grande spazio. Da qualche m2 per un frigo fino ad una stanza per il servizio con il nostro personale.</p>
           </div>
         </div>
       </div>
@@ -180,7 +180,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
             <h4 class="text-center text-reason">Aumentate il livello di energia pomeridiana.</h4>
           </div>
           <div class="card-reason-back">
-            <p>Un cibo troppo pesante ha effetti negativi sulla produttivita del team nella fascia pomeridiana. I nostri piatti freschi accuratamente studiati forniscono i nutrimenti necessari per aumentare concentrazione e resistenza fisica per il resto della giornata.</p>
+            <p>Un pranzo troppo pesante ha effetti negativi sulla produttivita del team. I nostri piatti forniscono i nutrimenti necessari per aumentare concentrazione e resistenza fisica per il resto della giornata.</p>
           </div>
         </div>
       </div>
@@ -204,7 +204,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
             <h4 class="text-center text-reason">Trattenete e reclutate piu facilmente i migliori talenti.</h4>
           </div>
           <div class="card-reason-back">
-            <p>I migliori i piu brillant collaboratori sono attrati dai migliori posti di lavoro. Offrendo i piatti Assaporamo con cibo fresco, buono e sanno ai vostri dipendenti, manderete un messaggio chiaro sul tipo di valore e di investimenti che fate nelle personne nella vostra azienda.</p>
+            <p>I migliori collaboratori sono attrati dai migliori posti di lavoro. Offrendo piatti freschi, buoni e sani ai vostri dipendenti, manderete un messaggio chiaro sul tipo di investimenti che fate nelle personne nella vostra azienda.</p>
           </div>
         </div>
       </div>
@@ -288,7 +288,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
             <h4 class="text-center text-reason">Mangia quando vuoi, dove vuoi.</h4>
           </div>
           <div class="card-reason-back">
-            <p>Il tuo piatto servito in una scatola compostibile è sempre pronto ad essere degustato. Sigilito e protetto, lo puoi prendere quando vuoi/puoi e portalo dove preferisci: Sala pranzo, scrivania, sala riunione..o anche al parco! Decidi tu !</p>
+            <p>Il tuo piatto è protetto in una scatola compostibile sigilata ed è sempre pronto ad essere degustato.Lo puoi prendere quando vuoi e portalo dove preferisci: Sala pranzo, scrivania, sala riunione..o anche al parco! Decidi tu !</p>
           </div>
         </div>
       </div>
@@ -300,7 +300,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
             <h4 class="text-center text-reason">Prezzi dolci per dipendenti in salute.</h4>
           </div>
           <div class="card-reason-back">
-            <p>Proponiano prezzi scontati per le aziende con l'intento di rendere il cibo sano accessibile a tutti. Assieme alla tua azienda studiamo la migliore soluzione perche possa contribuire fino all 100% del costo del tuo pasto !</p>
+            <p>Proponiano prezzi scontati per le aziende con l'intento di rendere il cibo sano accessibile a tutti. Assieme alla tua azienda studiamo la migliore soluzione perche possa contribuire fino all 100% del costo del tuo pasto!</p>
           </div>
         </div>
       </div>
@@ -338,7 +338,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
   <div class="container text-center padding-top-bottom d-flex" id="marbo-60">
 
     <div class="row align-items-center">
-      <div class="col-12 col-md-6 col-lg-6">
+      <div class="col-12 col-md-6 col-lg-6 p-3">
         <h3 class="mb-3">Dei piatti per tutti i stili di vita</h3>
         <div>
           <p class="mb-0">In Assaporami, siamo molto attenti al benessere. Per questo motivo proponiamo dei piatti freschi, buoni e sani. Siamo anche molto attenti al rispetto delle persone, alle loro convinzioni e ai loro modo di alimentarsi. I nostri chef propongono un ampia gamma di piatti equilibrati: Piatti per sportivi, vegani, vegetariani, piatti senza glutine, o senza maiale. Le etichette, e le informazioni sul nostro sito, vi permettono di sapere quali ingredienti sono stati usati per la loro preparazione, se ci sono degli allergeni particolari, quanti calorie comporta un piatto o ancora che tipo di nutrimenti contengono. Pensiamo a voi. A tutti voi.</p>
