--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -9,27 +9,27 @@
     <title><%= current_page.data.title %></title>
     <%= stylesheet_link_tag "application" %>
     <%= javascript_include_tag "application" %>
-    <%= favicon_tag 'images/logo_or.png' %>
+    <%= favicon_tag "https://res.cloudinary.com/orexibus/image/upload/v1573727841/Assaporami/Index/assaporami_logo.png" %>
     <!-- Google result text-->
-    <title>Assaporami business | Servizi di ristorazioni aziendali innovativi</title>
+    <title>Assaporami | Servizi di ristorazioni aziendali innovativi</title>
     <!-- Google result description-->
-    <meta name="description" content="OR è un'agenzia italiana di PR & Comunicazione integrata che si occupa della relazione con i media e cura la strategia di sviluppo del marchio degli attori del lusso, della moda, del design e dell'arte.">
+    <meta name="description" content="Assaporami è una societa che fornisce servizi di ristorazione su misura per le aziende: Food delivery personalizzato, corner on-site (con o senza personale) & exclusive meeting lunch. Solo cibo fresco, buono e sano.">
 
     <!-- Facebook -->
-    <meta property="og:site_name" content="Olimpia Rospigliosi Agency"/>
-    <meta property="og:title" content="Olimpia Rospigliosi Agency - PR & Comunicazione" />
-    <meta property="og:description" content="OR è un'agenzia italiana di PR & Comunicazione integrata che si occupa della relazione con i media e cura la strategia di sviluppo del marchio degli attori del lusso, della moda, del design e dell'arte."/>
+    <meta property="og:site_name" content="Assaporami"/>
+    <meta property="og:title" content="Assaporami - Servizi di ristorazioni aziendali innovativi." />
+    <meta property="og:description" content="Assaporami fornisce servizi di ristorazione su misura per le aziende: Food delivery personalizzato, corner on-site (con o senza personale) & exclusive meeting lunch. Solo cibo fresco, buono e sano."/>
     <meta property="og:image" itemprop="image" content="https://res.cloudinary.com/pimpi1/image/upload/v1561313188/sito/Meta/meta_profile_femvpe.jpg" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.olimpiarospigliosi.it/"/>
+    <meta property="og:url" content="https://www.assaporami.it/"/>
 
     <!-- Twitter -->
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@OlimpiaRospigli">
-    <meta name="twitter:title" content="Olimpia Rospigliosi Agency - PR & Communicazione">
-    <meta name="twitter:description" content="OR è una societa italiana di PR & Comunicazione integrata che si occupa della relazione con i media e cura la strategia di sviluppo del marchio degli attori del lusso, della moda, del design e dell'arte.">
-    <meta name="twitter:creator" content="@OlimpiaRospigli">
+    <meta name="twitter:site" content="@assaporami">
+    <meta name="twitter:title" content="Assaporami - Servizi di ristorazione aziendali innovativi">
+    <meta name="twitter:description" content="Assaporami fornisce servizi di ristorazione su misura per le aziende: Food delivery personalizzato, corner on-site (con o senza personale) & exclusive meeting lunch. Solo cibo fresco, buono e sano.">
+    <meta name="twitter:creator" content="@assaporami">
     <meta name="twitter:image:src" content="http://twitter-card.jpg">
 
 
