carousel color try

--- a/source/stylesheets/components/_index.scss
+++ b/source/stylesheets/components/_index.scss
@@ -9,4 +9,5 @@
 @import "horizontal_simple_form";
 @import "simple_form_button";
 @import "card_reason";
-@import "gallery"
+@import "gallery";
+@import "caroussel_update";
