--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -87,7 +87,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
           </div>
           <div class="carousel-caption">
             <h3>Assaporami Event</h3>
-            <p>Assieme a voi organizziamo eventi privilegiati per i vostri collaboratori: team-building, break-fast meeting, interventi eco-responsabili, presentazione ricette...</p>
+            <p>Assieme a voi organizziamo eventi privilegiati per i vostri collaboratori: team-building, break-fast meeting, interventi eco-responsabili...</p>
           </div>
         </div>
       <!--/.Slides-->
