--- a/source/stylesheets/components/_caroussel_update.scss
+++ b/source/stylesheets/components/_caroussel_update.scss
@@ -1,3 +1,27 @@
 // .carousel-control-prev-icon :after {
 //   color: #7AE831;
 // }
+
+// .carousel-control-prev-icon,
+// .carousel-control-next-icon {
+//   height: 100px;
+//   width: 100px;
+//   outline: black;
+//   background-size: 100%, 100%;
+//   border-radius: 50%;
+//   border: 1px solid black;
+//   background-image: none;
+// }
+
+// .carousel-control-next-icon:after
+// {
+//   content: '>';
+//   font-size: 35px;
+//   color: red;
+// }
+
+// .carousel-control-prev-icon:after {
+//   content: '<';
+//   font-size: 35px;
+//   color: red;
+// }
