page contact employees

--- a/source/contact_employees.html.erb
+++ b/source/contact_employees.html.erb
@@ -1,11 +1,8 @@
 ---
-title: Assaporami Business - Contatti
+title: Assaporami - Contatti per dipendenti
 ---
 
 <div class="wrapper">
-  <div class="banner banner-map">
-
-  </div>
 
   <div class="container pt-5 pb-16">
     <div class="row d-flex justify-content-between">
@@ -71,4 +68,3 @@ title: Assaporami Business - Contatti
     </div><!-- row -->
   </div><!-- end container -->
 </div><!-- end wrapper -->
-
