--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -323,7 +323,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
     <div class="row justify-content-center mt-4">
       <div class="col-10 col-md-8 col-lg-10">
         <div class="card-business-green">
-        <p class="mb-0">SEI UN DIPENDENTE DI UN'AZIENDA E VUOI PORTARE ASSAPORAMI NEI TUOI UFFICI ?&nbsp;&nbsp;<%= link_to "CONTATTACI", "/contact.html", class: "btn btn-simple-contact" %> </p>
+        <p class="mb-0">SEI UN DIPENDENTE DI UN'AZIENDA E VUOI PORTARE ASSAPORAMI NEI TUOI UFFICI ?&nbsp;&nbsp;<%= link_to "CONTATTACI", "/contact_employees.html#first_name", class: "btn btn-simple-contact" %> </p>
         </div>
       </div>
     </div>
